src/test/ui/associated-types/cache/project-fn-ret-invariant.ok.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/project-fn-ret-invariant.rs:59:1
   |
LL | fn main() { }
   | ^^^^^^^^^^^^^

error: aborting due to previous error

